Add partner logos

--- a/_pages/index/_program-statistics.html
+++ b/_pages/index/_program-statistics.html
@@ -1,5 +1,5 @@
 <div class="program-statistics page-section">
     <div class="container">
-        {% include modules/carousel.html title="program-stats" class="transparent" content="partials/stats.html" indicators=true size=site.data.stats.size interval=15 bottomcontrols=true %}
+        {% include modules/carousel.html title="program-stats" class="transparent green-indicators" content="partials/stats.html" indicators=true size=site.data.stats.size interval=15 bottomcontrols=true %}
     </div>
 </div>
