--- a/_pages/index/index.html
+++ b/_pages/index/index.html
@@ -44,6 +44,7 @@ jumbotron:
 
 <main>
     {% include_relative _program-overview.html %}
+    {% include_relative _partners.html %}
     {% include_relative _summer-program.html %}
     {% include_relative _eligibility.html %}
     {% include_relative _application-process.html %}
