--- a/_pages/index/_summer-program.html
+++ b/_pages/index/_summer-program.html
@@ -5,9 +5,14 @@
             <h3>Summer Program 06/13/16 - 07/22/16</h3>
         </div>
 
-        <article>
-            <h4>6 Weeks</h4>
-            <p>What’s a goal without a deadline? In six weeks, students learn the technology and business skills required to develop a civic-oriented startup. The application and admissions process is competitive, curriculum learned in lightspeed pace, but the achievement is worth the effort!</p>
-        </article>
+        <div class="shelf clearfix">
+            <div class="thumb">
+                <img class="flag" src="/assets/images/icons/flag.png" alt="">
+            </div>
+            <article>
+                <h4>What’s a goal without a deadline?</h4>
+                <p>In six weeks, students learn the technology and business skills required to develop a civic-oriented startup. The application and admissions process is competitive, curriculum learned in lightspeed pace, but the achievement is worth the effort!</p>
+            </article>
+        </div>
     </div>
 </section>
