--- a/_pages/index/_summer-program.html
+++ b/_pages/index/_summer-program.html
@@ -1,4 +1,4 @@
-<section class="page-section">
+<section class="summer-program page-section">
     <div class="container">
         <div class="blackboard">
             <h2 class="section-header">2016 Summer Program</h2>
@@ -6,10 +6,10 @@
         </div>
 
         <div class="shelf clearfix">
-            <div class="thumb">
+            <div class="shelf-image">
                 <img class="flag" src="/assets/images/icons/flag.png" alt="">
             </div>
-            <article>
+            <article class="shelf-content">
                 <h4>What’s a goal without a deadline?</h4>
                 <p>In six weeks, students learn the technology and business skills required to develop a civic-oriented startup. The application and admissions process is competitive, curriculum learned in lightspeed pace, but the achievement is worth the effort!</p>
             </article>
