Revert "Make the partners carousel the same height for each item"
This reverts commit 069db002dc7c891374e21408ec206121178308c8.

--- a/_pages/index/_partners.html
+++ b/_pages/index/_partners.html
@@ -6,7 +6,7 @@
         </div>
 
         <aritcle>
-            {% include modules/carousel.html title="program-partners" class="program-partners green-indicators flex-grid-carousel" content="partials/partners.html" indicators=true size=site.data.partners.size interval=15 %}
+            {% include modules/carousel.html title="program-partners" class="program-partners green-indicators" content="partials/partners.html" indicators=true size=site.data.partners.size interval=15 %}
         </aritcle>
     </div>
 </section>
