--- a/_pages/index/index.html
+++ b/_pages/index/index.html
@@ -4,9 +4,9 @@ permalink: /
 jumbotron:
   text: >
     ## Summer 2016
-  #button:
-    #text: Apply
-    #url: https://www.surveymonkey.com/r/smytp2016
+  button:
+    text: Apply
+    url: https://www.surveymonkey.com/r/smytp2016
   items:
       - image: assets/images/banners/home_1.jpg
         position:
