--- a/_pages/data-day.html
+++ b/_pages/data-day.html
@@ -1,28 +1,29 @@
 ---
-layout: default
+layout: base
 permalink: /data-day/
 ---
 
 <main>
-  <section class="program-overview page-section">
-      <div class="container" style="text-align: center;">
-          <div class="blackboard" style="display: inline-block; margin: 0">
-              <h1 class="section-header" style="text-align: left">Data Exploration and Storytelling</h1>
-              <p>Bacon ipsum dolor amet swine officia bacon eu boudin shoulder pork elit meatloaf picanha pastrami pig shankle. Ribeye proident shankle corned beef doner, sunt consectetur short loin sint magna. Ball tip esse in sed ribeye, andouille sunt consequat ipsum bacon alcatra corned beef. Tempor est commodo kevin alcatra, velit voluptate veniam magna chuck mollit swine boudin.</p>
-          </div>
+  <section class="page-section">
+      <div class="container">
           <div class="canvas">
+              <div class="row">
+                <h1>Data Exploration and Storytelling</h1>
+                <p>Bacon ipsum dolor amet swine officia bacon eu boudin shoulder pork elit meatloaf picanha pastrami pig shankle. Ribeye proident shankle corned beef doner, sunt consectetur short loin sint magna. Ball tip esse in sed ribeye, andouille sunt consequat ipsum bacon alcatra corned beef. Tempor est commodo kevin alcatra, velit voluptate veniam magna chuck mollit swine boudin.</p>
+              </div>
               <div class="row">
                 <h2>Deliverables</h2>
                 <p>Your team should look to accomplish as many of the following tasks as possible. Each team will have a chance to present at the end of the session.</p>
+                <p><em>in no particular order:</em></p>
                 <ul>
-                  <li>Select Leader</li>
                   <li>Create Team Name</li>
-                  <li>Define Team Roles </li>
-                  <li>Research Datasets</li>
-                  <li>Identify a Data Story </li>
+                  <li>Select Leader</li>
+                  <li>Define Team Roles</li>
+                  <li>Identify Story and/or Hypothesis</li>
+                  <li>Research Dataset(s)</li>
                   <li>Create Outline </li>
                   <li>Create Branding/Marketing Visuals</li>
-                  <li>Create DataViz</li>
+                  <li>Create Data Visualization(s)</li>
                   <li>Create Maps</li>
                   <li>Create Presentation</li>
                   <li>Create Website</li>
@@ -34,7 +35,7 @@ permalink: /data-day/
                 <h2>Suggested Datasets and Starter Questions</h2>
                 <p>These datasets were chosen because they are regularly updated, contain a wealth of information, and are relatively straightforward to understand.</p>
                 <p>The questions are just <em>samples</em> to serve as a starting point. Feel free to expand beyond what is listed below.</p>
-                <div class="col-xs-12 col-sm-6 col-md-3">
+                <div class="col-sm-12">
                   <h3>Public Safety</h3>
                   <h4>Datasets</h4>
                   <p><a href="https://data.smgov.net/Public-Safety/Police-Calls-for-Service/ia9m-wspt">Police Calls for Service</a></p>
@@ -44,7 +45,7 @@ permalink: /data-day/
                   <p>What crime should weekend visitors be aware of?</p>
                   <p>What area(s) of the City see the most Public Safety activity?</p>
                 </div>
-                <div class="col-xs-12 col-sm-6 col-md-3">
+                <div class="col-sm-12">
                   <h3>The Environment</h3>
                   <h4>Datasets</h4>
                   <p><a href="https://data.smgov.net/Public-Services/Water-Usage/4nnq-5vzx">Water Usage</a></p>
@@ -55,7 +56,7 @@ permalink: /data-day/
                   <p>How many different types of trees exist in Santa Monica?</p>
                   <p>What is the most valuable tree in Santa Monica? Most valuable type of tree?</p>
                 </div>
-                <div class="col-xs-12 col-sm-6 col-md-3">
+                <div class="col-sm-12">
                   <h3>Doing Business</h3>
                   <h4>Datasets</h4>
                   <p><a href="https://data.smgov.net/Permits-Licenses/Active-Business-Licenses/wpc4-2j2n">Active Business Licenses</a></p>
@@ -64,7 +65,7 @@ permalink: /data-day/
                   <p>How many different types of businesses (legally) operate in Santa Monica</p>
                   <p>What area(s) in Santa Monica sees the most development activity?</p>
                 </div>
-                <div class="col-xs-12 col-sm-6 col-md-3">
+                <div class="col-sm-12">
                   <h3>Parking</h3>
                   <h4>Datasets</h4>
                   <p><a href="https://data.smgov.net/Transportation/Parking-Lot-Counts/ng8m-khuz">Parking Lot Counts</a></p>
@@ -72,7 +73,7 @@ permalink: /data-day/
                   <p>Which lot(s) offer the best availability based on day of week and/or time of day?</p>
                   <p>Do certain areas of Santa Monica provide more parking options than others? If so, why?</p>
                 </div>
-                <div class="col-xs-12 col-sm-6 col-md-3">
+                <div class="col-sm-12">
                   <h3>Government Accountability</h3>
                   <h4>Datasets</h4>
                   <p><a href="https://data.smgov.net/Public-Services/Closed-GovOutreach-Submissions/tsas-mvez">Closed GovOutreach Submissions</a></p>
@@ -89,24 +90,25 @@ permalink: /data-day/
                 <p>All of the tools below are either free or offer free trials. Many require an email address signup.
                 <h3>Basic</h3>
                 <ul>
-                  <li>Pen/paper: <i>project management, design</i></li>
-                  <li>Excel, Google Sheets, Socrata dataset tools: <i>data cleaning, data analysis, data visualization</i></li>
-                  <li>Google Drive, Dropbox, Box, USB stick: <i>asset management</i></li>
-                  <li>Powerpoint</span>, Google Slides: <i>presentation</i></li>
+                  <li>Pen/paper: <em>project management, design</em></li>
+                  <li>Excel, Google Sheets, Socrata dataset tools: <em>data cleaning, data analysis, data visualization</em></li>
+                  <li>Google Drive, Dropbox, Box, USB stick: <em>asset management</em></li>
+                  <li>Powerpoint</span>, Google Slides: <em>presentation</em></li>
                 </ul>
                 <h3>Intermediate</h3>
                 <ul>
-                  <li><a href="https://trello.com">Trello</a>: <i>project management</i></li>
-                  <li><a href="http://geojson.io">geojson.io</a>: <i>geodata analysis, geodata visualization</i></li>
-                  <li><a href="http://www.google.com/earth/">Google Earth Pro</a>: <i>geodata analysis, geodata visualization</i></li>
-                  <li><a href="http://codepen.io">codepen.io</a>: <i>development, presentation</i></li>
+                  <li><a href="https://trello.com">Trello</a>: <em>project management</em></li>
+                  <li><a href="http://geojson.io">geojson.io</a>: <em>geodata analysis, geodata visualization</em></li>
+                  <li><a href="http://www.google.com/earth/">Google Earth Pro</a>: <em>geodata analysis, geodata visualization</em></li>
+                  <li><a href="http://codepen.io">codepen.io</a>: <em>development, presentation</em></li>
+                  <li><a href="http://www.wix.com">WIX</a>: <em>presentation</em></li>
                 </ul>
                 <h3>Advanced</h3>
                 <ul>
-                  <li><a href="http://www.qgis.org/en/site/">QGIS</a>: <i>geodata analysis, geodata visualization</i></li>
-                  <li><a href="http://www.tableau.com/">Tableau</a>: <i>data cleaning, data analysis, data visualization</i></li>
-                  <li><a href="https://github.com">GitHub</a>: <i>project management, asset management, development, presentation</i></li>
-                  <li><a href="https://hyperdev.com">HyperDev</a>:<i> asset management, development, presentation</i></li>
+                  <li><a href="http://www.qgis.org/en/site/">QGIS</a>: <em>geodata analysis, geodata visualization</em></li>
+                  <li><a href="http://www.tableau.com/">Tableau</a>: <em>data cleaning, data analysis, data visualization</em></li>
+                  <li><a href="https://github.com">GitHub</a>: <em>project management, asset management, development, presentation</em></li>
+                  <li><a href="https://hyperdev.com">HyperDev</a>:<em> asset management, development, presentation</em></li>
                 </ul>
               </div>
           </div>
