--- a/_pages/data-day.html
+++ b/_pages/data-day.html
@@ -8,6 +8,7 @@ permalink: /data-day/
       <div class="container">
           <div class="canvas" style="padding: 1em;">
               <div class="row">
+                <img class="img-responsive" src="{{ site.baseurl }}/assets/images/map.png" alt="data map" />
                 <h1>Data Exploration and Storytelling</h1>
                 <p>Bacon ipsum dolor amet swine officia bacon eu boudin shoulder pork elit meatloaf picanha pastrami pig shankle. Ribeye proident shankle corned beef doner, sunt consectetur short loin sint magna. Ball tip esse in sed ribeye, andouille sunt consequat ipsum bacon alcatra corned beef. Tempor est commodo kevin alcatra, velit voluptate veniam magna chuck mollit swine boudin.</p>
               </div>
