added intro paragraph.

--- a/_pages/data-day.html
+++ b/_pages/data-day.html
@@ -10,7 +10,23 @@ permalink: /data-day/
               <div class="row">
                 <img class="img-responsive" src="{{ site.baseurl }}/assets/images/map.png" alt="data map" />
                 <h1>Data Exploration and Storytelling</h1>
-                <p>Bacon ipsum dolor amet swine officia bacon eu boudin shoulder pork elit meatloaf picanha pastrami pig shankle. Ribeye proident shankle corned beef doner, sunt consectetur short loin sint magna. Ball tip esse in sed ribeye, andouille sunt consequat ipsum bacon alcatra corned beef. Tempor est commodo kevin alcatra, velit voluptate veniam magna chuck mollit swine boudin.</p>
+                <blockquote>“In God we trust, all others bring data.” – William Edward Deming, father of Total Quality Management. </blockquote>
+                <p>There is no denying that our world is become increasingly interconnected with data. Every product we purchase, every prescription we fill, every course we register for are captured in databases to be analyzed for someone somewhere (hopefully for good.)</p>
+                <p>Government is becoming much more data-driven. Cities like Santa Monica are seeking to better understanding our residents (or as some of us refer to you, our customers.) Our data is captured in one of two ways. </p>
+                
+                <ol>
+                  <li>Machine generated based on some human interaction and/or business rule. For example, when a street sweeper or police car fitted with an automatic license plate reader is moving down a street, it can constantly read license plate numbers of parked cars looking for stolen vehicles. </li>
+                  <li>Human generated, as in a person behind a keyboard inputs data pertaining to a customer, an asset, a place, and more. </li>
+                </ol>
+                <p>The City of Santa Monica has numerous data points that we are proud to make publicly available via our highly rated open data program, available at <a href="http://data.smgov.net">data.smgov.net</a>. </p>
+                <p>This is where your assignment begins. You will be asked to take one of the two roles described below, and use the City’s publicly available data to tell a story. As you approach your task, remember that the data alone, while raw and factual, doesn’t tell a story that the average person can understand. Try to dive deep into the data and find correlations and/or causation to help strengthen your position(s). </p>
+                <h2>Available Roles</h2>
+                <h3>The Master Storyteller</h3>
+                <p>You believe people care more about stories than data. You think data is of some value, but only as it pertains to pushing your agenda. Look at the available datasets and tell a compelling story. Your goal is to convince as many people as possible to care about and get excited about your story. Look at the City’s data and tell a story – the story can be positive, negative, or neutral. The tone doesn’t matter as much as how engaged and excited people are to hear your story. </p>
+                <p>Beware! Some might call you a great storyteller, others may call you a manipulator. Consider ahead of time what holes your detractors and rivals might shoot in your story. Be prepared with contingency plans in the event you are challenged. </p>
+                <h3>The Master Researcher</h3>
+                <p>You are the anti-storyteller. You are a cold, data processing machine. Your only mission is to find patterns and trends in data. You are purely objective and you only care about presenting the facts. You also have an interest in the causation and/or correlation for your datasets. Create hypothesis for the trends and patterns you have identified in your data. </p>
+                <p>Just as the storyteller will have their detractors, you too will be scrutinized. You will be labeled uncharismatic and irrelevant because you don’t have a great story to connect to people – you must focus on the value and let the data sell itself. Make sure that your research is strong and relevant to the average person.</p>
               </div>
               <div class="row">
                 <h2>Deliverables</h2>
