--- a/_pages/data-day.html
+++ b/_pages/data-day.html
@@ -11,35 +11,42 @@ permalink: /data-day/
                 <img class="img-responsive" src="{{ site.baseurl }}/assets/images/map.png" alt="data map" />
                 <h1>Data Exploration and Storytelling</h1>
                 <blockquote>“In God we trust, all others bring data.” – William Edward Deming, father of Total Quality Management. </blockquote>
-                <p>There is no denying that our world is become increasingly interconnected with data. Every product we purchase, every prescription we fill, every course we register for are captured in databases to be analyzed by someone, somewhere (hopefully for good.)</p>
+                <p>There is no denying that our world is becoming increasingly interconnected with data. Every product we purchase, every prescription we fill, every course we register for are captured in databases to be analyzed by someone, somewhere (hopefully for good.)</p>
                 <p>Like other industries, government is rich with data, and looking to do more. Cities like Santa Monica are seeking to better understanding our residents (increasingly referred to as customers.)  
-                <p>The City of Santa Monica has numerous data points that we are proud to make publicly available via our highly rated open data program, available at <a href="http://data.smgov.net">data.smgov.net</a>. </p>
-                <p>This is where your assignment begins. You are being  asked to take one of the two roles described below, and use the City’s publicly available data to create value for others. As you approach your task, remember that the data alone, while raw and factual, doesn’t tell a story that the average person can understand. Try to dive deep into the data and find correlations and/or causation to help strengthen your position(s). </p>
+                <p>The City of Santa Monica has numerous data points that we are proud to make publicly available via our highly rated open data program, available at <a href="https://data.smgov.net">data.smgov.net</a>. </p>
+                <p><strong>This is where your assignment begins.</strong> You are being  asked to take one of the two roles described below, and use the City’s publicly available data to create value for others. As you approach your task, remember that the data alone, while raw and factual, doesn’t tell a story that the average person can understand. Try to dive deep into the data and find correlations and/or causation to help strengthen your position(s). </p>
                 <h2>Available Roles</h2>
                 <h3>The Master Storyteller</h3>
-                <p>You believe people care more about stories than data. You think data is of some value, but only as it pertains to pushing your agenda. Look at the available datasets and tell a compelling story. Your goal is to convince as many people as possible to care about and get excited about your story. Look at the City’s data and tell a story – the story can be positive, negative, or neutral. The tone doesn’t matter as much as how engaged and excited people are to hear your story. </p>
+                <p>You believe people care more about stories than data. You think data is of some value, but only as it pertains to pushing your agenda. Look at the available datasets and tell a compelling story. Your goal is to convince people to care about and get excited about your story. The story can be positive, negative, or neutral. The tone doesn’t matter as much as how engaged and excited people are to hear your story. </p>
                 <p>Beware! Some might call you a great storyteller, others may call you a manipulator. Consider ahead of time what holes your detractors and rivals might shoot in your story. Be prepared with contingency plans in the event you are challenged. </p>
                 <h3>The Master Researcher</h3>
-                <p>You are the anti-storyteller. You are a cold, data processing machine. Your only mission is to find patterns and trends in data. You are purely objective and you only care about presenting the facts. You also have an interest in the causation and/or correlation for your datasets. Create hypothesis for the trends and patterns you have identified in your data. </p>
-                <p>Just as the storyteller will have their detractors, you too will be scrutinized. You will be labeled uncharismatic and irrelevant because you don’t have a great story to connect to people – you must focus on the value and let the data sell itself. Make sure that your research is strong and relevant to the average person.</p>
+                <p>You are a cold, data processing machine. Your only mission is to find patterns and trends in data. You are purely objective and you only care about presenting the facts. You also have an interest in the causation and/or correlation for your datasets. Create hypotheses for the trends and patterns you have identified in your data. </p>
+                <p>Just as the storyteller will have their detractors, you too will be scrutinized. You will be labeled uncharismatic and irrelevant because you don’t have a great story that connects with people – you must focus on the value and let the data sell itself. Make sure that your research is strong and relevant to the average person.</p>
               </div>
               <div class="row">
                 <h2>Deliverables</h2>
-                <p>Your team should look to accomplish as many of the following tasks as possible. Each team will have a chance to present at the end of the session.</p>
-                <p><em>in no particular order:</em></p>
+                <p>Your team should look to accomplish as many of the following tasks as possible. <strong>Each team will present their findings the end of the session.</strong></p>
+                <h3>Administation</h3>
                 <ul>
                   <li>Create Team Name</li>
                   <li>Select Leader</li>
                   <li>Define Team Roles</li>
+                </ul>
+                <h3>Research</h3>
+                <ul>
                   <li>Identify Story and/or Hypothesis</li>
                   <li>Research Dataset(s)</li>
-                  <li>Create Outline </li>
-                  <li>Create Branding/Marketing Visuals</li>
-                  <li>Create Data Visualization(s)</li>
+                  <li>Create Outline</li>
+                  <li>Conduct Quality Assurance</li>
+                </ul>
+                <h3>Implementation</h3>
+                <ul>
+                  <li>Create Data Visualizations</li>
                   <li>Create Maps</li>
+                  <li>Create Content (text)</li>
+                  <li>Create Branding/Marketing Visuals</li>
                   <li>Create Presentation</li>
                   <li>Create Website</li>
-                  <li>Create Content</li>
                   <li>Conduct Quality Assurance</li>
                 </ul>
               </div>
