more tools links

--- a/_pages/data-day.html
+++ b/_pages/data-day.html
@@ -12,8 +12,8 @@ permalink: /data-day/
                 <h1>Data Exploration and Storytelling</h1>
                 <blockquote>“In God we trust, all others bring data.” – William Edward Deming, father of Total Quality Management. </blockquote>
                 <p>There is no denying that our world is becoming increasingly interconnected with data. Every product we purchase, every prescription we fill, every course we register for are captured in databases to be analyzed by someone, somewhere (hopefully for good.)</p>
-                <p>Like other industries, government is rich with data, and looking to do more. Cities like Santa Monica are seeking to better understanding our residents (increasingly referred to as customers.)  
-                <p>The City of Santa Monica has numerous data points that we are proud to make publicly available via our highly rated open data program, available at <a href="https://data.smgov.net">data.smgov.net</a>. </p>
+                <p>Like other industries, government is rich with data, and looking to do more. Cities like Santa Monica are seeking to better understanding our residents (increasingly referred to as customers.)
+                <p>The City of Santa Monica has numerous data points that we are proud to make publicly available via our highly rated open data program, available at <a target="_blank" href="https://data.smgov.net">data.smgov.net</a>. </p>
                 <p><strong>This is where your assignment begins.</strong> You are being  asked to take one of the two roles described below, and use the City’s publicly available data to create value for others. As you approach your task, remember that the data alone, while raw and factual, doesn’t tell a story that the average person can understand. Try to dive deep into the data and find correlations and/or causation to help strengthen your position(s). </p>
                 <h2>Available Roles</h2>
                 <h3>The Master Storyteller</h3>
@@ -24,7 +24,7 @@ permalink: /data-day/
                 <p>Just as the storyteller will have their detractors, you too will be scrutinized. You will be labeled uncharismatic and irrelevant because you don’t have a great story that connects with people – you must focus on the value and let the data sell itself. Make sure that your research is strong and relevant to the average person.</p>
               </div>
               <div class="row">
-                <h2>Deliverables</h2>
+                <h2>Objectives</h2>
                 <p>Your team should look to accomplish as many of the following tasks as possible. <strong>Each team will present their findings the end of the session.</strong></p>
                 <h3>Administation</h3>
                 <ul>
@@ -57,8 +57,8 @@ permalink: /data-day/
                 <div class="col-sm-12">
                   <h3>Public Safety</h3>
                   <h4>Datasets</h4>
-                  <p><a href="https://data.smgov.net/Public-Safety/Police-Calls-for-Service/ia9m-wspt">Police Calls for Service</a></p>
-                  <p><a href="https://data.smgov.net/Public-Safety/Fire-Calls-for-Service/5y3u-5db4">Fire Calls for Service</a></p>
+                  <p><a target="_blank" href="https://data.smgov.net/Public-Safety/Police-Calls-for-Service/ia9m-wspt">Police Calls for Service</a></p>
+                  <p><a target="_blank" href="https://data.smgov.net/Public-Safety/Fire-Calls-for-Service/5y3u-5db4">Fire Calls for Service</a></p>
                   <h4>Questions</h4>
                   <p>What is the busiest time of day for Santa Monica Public Safety?</p>
                   <p>What crime should weekend visitors be aware of?</p>
@@ -67,8 +67,8 @@ permalink: /data-day/
                 <div class="col-sm-12">
                   <h3>The Environment</h3>
                   <h4>Datasets</h4>
-                  <p><a href="https://data.smgov.net/Public-Services/Water-Usage/4nnq-5vzx">Water Usage</a></p>
-                  <p><a href="https://data.smgov.net/Public-Assets/Trees/ekya-mi9c">Trees</a></p>
+                  <p><a target="_blank" href="https://data.smgov.net/Public-Services/Water-Usage/4nnq-5vzx">Water Usage</a></p>
+                  <p><a target="_blank" href="https://data.smgov.net/Public-Assets/Trees/ekya-mi9c">Trees</a></p>
                   <h4>Questions</h4>
                   <p>What neighborhoods use the most water in Santa Monica? The least?</p>
                   <p>Compare and contrast usage for different categories (Commercial, Residential, etc.)</p>
@@ -78,8 +78,8 @@ permalink: /data-day/
                 <div class="col-sm-12">
                   <h3>Doing Business</h3>
                   <h4>Datasets</h4>
-                  <p><a href="https://data.smgov.net/Permits-Licenses/Active-Business-Licenses/wpc4-2j2n">Active Business Licenses</a></p>
-                  <p><a href="https://data.smgov.net/Permits-Licenses/Permit-Inspections-Schedule/xird-2kxi">Permit Inspection Schedule</a></p>
+                  <p><a target="_blank" href="https://data.smgov.net/Permits-Licenses/Active-Business-Licenses/wpc4-2j2n">Active Business Licenses</a></p>
+                  <p><a target="_blank" href="https://data.smgov.net/Permits-Licenses/Permit-Inspections-Schedule/xird-2kxi">Permit Inspection Schedule</a></p>
                   <h4>Questions</h4>
                   <p>How many different types of businesses (legally) operate in Santa Monica</p>
                   <p>What area(s) in Santa Monica sees the most development activity?</p>
@@ -87,7 +87,7 @@ permalink: /data-day/
                 <div class="col-sm-12">
                   <h3>Parking</h3>
                   <h4>Datasets</h4>
-                  <p><a href="https://data.smgov.net/Transportation/Parking-Lot-Counts/ng8m-khuz">Parking Lot Counts</a></p>
+                  <p><a target="_blank" href="https://data.smgov.net/Transportation/Parking-Lot-Counts/ng8m-khuz">Parking Lot Counts</a></p>
                   <h4>Questions</h4>
                   <p>Which lot(s) offer the best availability based on day of week and/or time of day?</p>
                   <p>Do certain areas of Santa Monica provide more parking options than others? If so, why?</p>
@@ -95,10 +95,10 @@ permalink: /data-day/
                 <div class="col-sm-12">
                   <h3>Government Accountability</h3>
                   <h4>Datasets</h4>
-                  <p><a href="https://data.smgov.net/Public-Services/Closed-GovOutreach-Submissions/tsas-mvez">Closed GovOutreach Submissions</a></p>
-                  <p><a href="https://data.smgov.net/Public-Services/Web-Analytics/8dh4-6epx">Web Analytics</a></p>
-                  <p><a href="https://data.smgov.net/Finance/Employee-Compensation-Report/nfbh-hx7m">Employee Compensation Report</a></p>
-                  <p><a href="https://data.smgov.net/Finance/Revenue-and-Expenditure-Actuals/w5k3-qui8">Revenue and Expenditure Actuals</a></p>
+                  <p><a target="_blank" href="https://data.smgov.net/Public-Services/Closed-GovOutreach-Submissions/tsas-mvez">Closed GovOutreach Submissions</a></p>
+                  <p><a target="_blank" href="https://data.smgov.net/Public-Services/Web-Analytics/8dh4-6epx">Web Analytics</a></p>
+                  <p><a target="_blank" href="https://data.smgov.net/Finance/Employee-Compensation-Report/nfbh-hx7m">Employee Compensation Report</a></p>
+                  <p><a target="_blank" href="https://data.smgov.net/Finance/Revenue-and-Expenditure-Actuals/w5k3-qui8">Revenue and Expenditure Actuals</a></p>
                   <h4>Questions</h4>
                   <p>Compare and contrast public interaction with different City departments.</p>
                   <p>Which departments provide the most value?</p>
@@ -106,28 +106,29 @@ permalink: /data-day/
               </div>
               <div class="row">
                 <h2>Suggested Tools</h2>
-                <p>All of the tools below are either free or offer free trials. Many require an email address signup.
+                <p>All of the tools below are either free or offer free trials, and should work on Windows, OS X and Linux. Many require an email address signup (some work with a Google account).
                 <h3>Basic</h3>
                 <ul>
                   <li>Pen/paper: <em>project management, design</em></li>
-                  <li>Excel, Google Sheets, Socrata dataset tools: <em>data cleaning, data analysis, data visualization</em></li>
-                  <li>Google Drive, Dropbox, Box, USB stick: <em>asset management</em></li>
-                  <li>Powerpoint</span>, Google Slides: <em>presentation</em></li>
+                  <li><a target="_blank" href="https://atom.io">Atom</a>, <a target="_blank" href="https://www.sublimetext.com">Sublime Text</a>: <em>project management, data cleaning, development</em></li>
+                  <li><a target="_blank" href="https://docs.google.com/spreadsheets">Google Sheets</a>, <a target="_blank" href="https://data.smgov.net/videos">Socrata dataset tools</a>: <em>data cleaning, data analysis, data visualization</em></li>
+                  <li><a target="_blank" href="https://drive.google.com">Google Drive</a>, <a target="_blank" href="https://www.dropbox.com">Dropbox</a>, <a target="_blank" href="https://www.box.com">Box</a>, USB stick: <em>asset management</em></li>
+                  <li><a target="_blank" href="https://docs.google.com/presentation">Google Slides</a>: <em>presentation</em></li>
                 </ul>
                 <h3>Intermediate</h3>
                 <ul>
-                  <li><a href="https://trello.com">Trello</a>: <em>project management</em></li>
-                  <li><a href="http://geojson.io">geojson.io</a>: <em>geodata analysis, geodata visualization</em></li>
-                  <li><a href="http://www.google.com/earth/">Google Earth Pro</a>: <em>geodata analysis, geodata visualization</em></li>
-                  <li><a href="http://codepen.io">codepen.io</a>: <em>development, presentation</em></li>
-                  <li><a href="http://www.wix.com">WIX</a>: <em>presentation</em></li>
+                  <li><a target="_blank" href="https://trello.com">Trello</a>: <em>project management</em></li>
+                  <li><a target="_blank" href="http://geojson.io">geojson.io</a>: <em>geodata analysis, geodata visualization</em></li>
+                  <li><a target="_blank" href="http://www.google.com/earth/">Google Earth Pro</a>: <em>geodata analysis, geodata visualization</em></li>
+                  <li><a target="_blank" href="http://codepen.io">codepen.io</a>: <em>development, presentation</em></li>
+                  <li><a target="_blank" href="http://www.wix.com">WIX</a>: <em>presentation</em></li>
                 </ul>
                 <h3>Advanced</h3>
                 <ul>
-                  <li><a href="http://www.qgis.org/en/site/">QGIS</a>: <em>geodata analysis, geodata visualization</em></li>
-                  <li><a href="http://www.tableau.com/">Tableau</a>: <em>data cleaning, data analysis, data visualization</em></li>
-                  <li><a href="https://github.com">GitHub</a>: <em>project management, asset management, development, presentation</em></li>
-                  <li><a href="https://hyperdev.com">HyperDev</a>:<em> asset management, development, presentation</em></li>
+                  <li><a target="_blank" href="http://www.qgis.org/en/site/">QGIS</a>: <em>geodata analysis, geodata visualization</em></li>
+                  <li><a target="_blank" href="http://public.tableau.com/">Tableau (Windows and OS X only)</a>: <em>data cleaning, data analysis, data visualization</em></li>
+                  <li><a target="_blank" href="https://github.com">GitHub</a>: <em>project management, asset management, development, presentation</em></li>
+                  <li><a target="_blank" href="https://hyperdev.com">HyperDev</a>:<em> asset management, development, presentation</em></li>
                 </ul>
               </div>
           </div>
