--- a/_pages/data-day.html
+++ b/_pages/data-day.html
@@ -31,6 +31,7 @@ permalink: /data-day/
                   <li>Create Team Name</li>
                   <li>Select Leader</li>
                   <li>Define Team Roles</li>
+                  <li>Create a Work Space</li>
                 </ul>
                 <h3>Research</h3>
                 <ul>
