Fix invalid links on homepage under Awards section.

--- a/_pages/index/_program-awards.html
+++ b/_pages/index/_program-awards.html
@@ -8,7 +8,7 @@
             {% for award in site.awards %}
                 <div class="award col-md-6 table-cell">
                     <div class="image">
-                        <a href="{{ award.url }}">
+                        <a href="{{ award.link }}">
                             <img src="{{ site.baseurl }}/assets/images/awards/{{ award.image }}" alt="Award from {{ award.name }}" />
                         </a>
                     </div>
