Clean up section headers

--- a/_pages/index/_application-process.html
+++ b/_pages/index/_application-process.html
@@ -1,7 +1,7 @@
 <section class="program-overview page-section">
     <div class="container">
-        <div class="blackboard">
-            <h2 class="section-header">Competitive Application Process</h2>
+        <div class="section-header">
+            <h2>Competitive Application Process</h2>
             <h3>Application Period 01/01/16 - 04/15/16</h3>
         </div>
 
