--- a/_pages/index/_eligibility.html
+++ b/_pages/index/_eligibility.html
@@ -1,7 +1,7 @@
 <div class="eligibility page-section">
     <div class="container">
-        <div class="blackboard">
-            <h2 class="section-header">Eligibility</h2>
+        <div class="section-header">
+            <h2>Eligibility</h2>
             <h3>No previous experience in business or technology required</h3>
         </div>
 
