--- a/_pages/index/_past-companies.html
+++ b/_pages/index/_past-companies.html
@@ -1,7 +1,7 @@
 <section class="past-companies page-section">
     <div class="container">
-        <div class="blackboard">
-            <h2 class="section-header">Previous Teams</h2>
+        <div class="section-header">
+            <h2>Previous Teams</h2>
             <h3>Our students have built 13 companies during our 6-week program</h3>
         </div>
 
