--- a/_pages/index/_program-overview.html
+++ b/_pages/index/_program-overview.html
@@ -1,7 +1,7 @@
 <section class="program-overview page-section">
-    <div class="container" style="text-align: center;">
-        <div class="blackboard" style="display: inline-block; margin: 0">
-            <h2 class="section-header" style="text-align: left">Program Overview</h2>
+    <div class="container text-center">
+        <div class="section-header">
+            <h2>Program Overview</h2>
             <h3>Learn lean start-up methods, coding, UI/UX, &amp; leadership skills</h3>
         </div>
 
