--- a/_pages/index/_program-staff.html
+++ b/_pages/index/_program-staff.html
@@ -1,7 +1,7 @@
 <section class="program-staff page-section">
     <div class="container">
-        <div class="blackboard">
-            <h2 class="section-header">Program Staff</h2>
+        <div class="section-header">
+            <h2>Program Staff</h2>
             <h3>Our alumni have joined the team</h3>
         </div>
 
