--- a/_pages/index/_alumni-quotes.html
+++ b/_pages/index/_alumni-quotes.html
@@ -1,7 +1,7 @@
 <section class="page-section page-section--alt quotes">
     <div class="container">
-        <div class="blackboard">
-            <h2 class="section-header">A blast from the past</h2>
+        <div class="section-header">
+            <h2>A blast from the past</h2>
             <h3>Here's what our alumni have to say</h3>
         </div>
 
