--- a/_pages/index/_partners.html
+++ b/_pages/index/_partners.html
@@ -1,7 +1,7 @@
 <section class="page-section">
     <div class="container">
-        <div class="blackboard">
-            <h2 class="section-header">Program Partners</h2>
+        <div class="section-header">
+            <h2>Program Partners</h2>
             <h3>Challenging Young Minds</h3>
         </div>
 
