--- a/_pages/index/_program-awards.html
+++ b/_pages/index/_program-awards.html
@@ -1,7 +1,7 @@
 <section class="program-awards page-section page-section--alt">
     <div class="container">
-        <div class="blackboard">
-            <h2 class="section-header">Awards</h2>
+        <div class="section-header">
+            <h2>Awards</h2>
             <h3>People are talking about us</h3>
         </div>
         <div class="trophy-case row css-table">
