--- a/_pages/index/_summer-program.html
+++ b/_pages/index/_summer-program.html
@@ -5,6 +5,15 @@
             <h3>Summer Program 06/13/16 - 07/22/16</h3>
         </div>
 
+        <div class="section-spacer">
+            <div class="text-center">
+                <div class="photo-album">
+                    {% include modules/photo.html photo="photos/summer_program_1.jpg" class="summer-1" %}
+                    {% include modules/photo.html photo="photos/summer_program_2.jpg" class="summer-2" %}
+                </div>
+            </div>
+        </div>
+
         <div class="shelf clearfix">
             <div class="shelf-image">
                 <img class="flag" src="/assets/images/icons/flag.png" alt="">
