--- a/_pages/index/_upcoming-events.html
+++ b/_pages/index/_upcoming-events.html
@@ -1,47 +1,60 @@
-<section class="upcoming-events page-section page-section--alt">
-    <div class="container">
-        <div class="row">
-            <div class="theater col-md-6">
-                <div class="tab-content">
-                    {% include modules/carousel.html title="upcoming-photos" class="transparent" content="partials/upcoming-photos.html" controls=false size=site.data.events.size interval=5 bottomcontrols=false %}
+{% assign eventsToShow = false %}
+
+{% for event in site.data.events %}
+    {% assign nowUnix = 'now' | date: '%s' | plus: 0 %}
+    {% assign eventUnix = event.date | date: '%s' | plus: 86400 %}
+
+    {% if eventUnix > nowUnix %}
+        {% assign eventsToShow = true %}
+    {% endif %}
+{% endfor %}
+
+{% if eventsToShow %}
+    <section class="upcoming-events page-section page-section--alt">
+        <div class="container">
+            <div class="row">
+                <div class="theater col-md-6">
+                    <div class="tab-content">
+                        {% include modules/carousel.html title="upcoming-photos" class="transparent" content="partials/upcoming-photos.html" controls=false size=site.data.events.size interval=5 bottomcontrols=false %}
+                    </div>
+                </div>
+
+                <div class="events col-md-6">
+                    <h2 class="section-header">Upcoming Events</h2>
+
+                    <section class="calendar" id="upcoming-events" role="tablist">
+                        {% for event in site.data.events %}
+                            {% assign nowUnix = 'now' | date: '%s' | plus: 0 %}
+                            {% assign eventUnix = event.date | date: '%s' | plus: 86400 %}
+
+                            {% comment %}
+                                Only render events that are in the future. We'll have a JavaScript fallback between updates
+                                to the website so old events are not shown.
+                            {% endcomment %}
+                            {% if eventUnix > nowUnix %}
+                                <div class="event clearfix js-event" data-date="{{ event.date }}">
+                                    <div class="cal">
+                                        <p class="date">{{ event.date | date: "%-d" }}</p>
+                                        <p class="month">{{ event.date | date: "%b" }}</p>
+                                    </div>
+                                    <div class="info">
+                                        <p class="day">{{ event.date | date: "%A" }}</p>
+                                        <p class="name">{{ event.name }}</p>
+                                    </div>
+                                    <div class="rsvp">
+                                        {% if event.link %}
+                                            <a href="{{ event.link }}">
+                                                <i class="icon icon-event-note"></i>
+                                                <span>RSVP</span>
+                                            </a>
+                                        {% endif %}
+                                    </div>
+                                </div>
+                            {% endif %}
+                        {% endfor %}
+                    </section>
                 </div>
             </div>
-
-            <div class="events col-md-6">
-                <h2 class="section-header">Upcoming Events</h2>
-
-                <section class="calendar" id="upcoming-events" role="tablist">
-                    {% for event in site.data.events %}
-                        {% assign nowUnix = 'now' | date: '%s' | plus: 0 %}
-                        {% assign eventUnix = event.date | date: '%s' | plus: 86400 %}
-
-                        {% comment %}
-                            Only render events that are in the future. We'll have a JavaScript fallback between updates
-                            to the website so old events are not shown.
-                        {% endcomment %}
-                        {% if eventUnix > nowUnix %}
-                            <div class="event clearfix js-event" data-date="{{ event.date }}">
-                                <div class="cal">
-                                    <p class="date">{{ event.date | date: "%-d" }}</p>
-                                    <p class="month">{{ event.date | date: "%b" }}</p>
-                                </div>
-                                <div class="info">
-                                    <p class="day">{{ event.date | date: "%A" }}</p>
-                                    <p class="name">{{ event.name }}</p>
-                                </div>
-                                <div class="rsvp">
-                                    {% if event.link %}
-                                        <a href="{{ event.link }}">
-                                            <i class="icon icon-event-note"></i>
-                                            <span>RSVP</span>
-                                        </a>
-                                    {% endif %}
-                                </div>
-                            </div>
-                        {% endif %}
-                    {% endfor %}
-                </section>
-            </div>
         </div>
-    </div>
-</section>
+    </section>
+{% endif %}
