Rename partials to match section titles

--- a/_pages/index/index.html
+++ b/_pages/index/index.html
@@ -44,14 +44,14 @@ jumbotron:
 
 <main>
     {% include_relative _program-overview.html %}
-    {% include_relative _partners.html %}
+    {% include_relative _program-partners.html %}
     {% include_relative _summer-program.html %}
     {% include_relative _eligibility.html %}
     {% include_relative _application-process.html %}
     {% include_relative _upcoming-events.html %}
     {% include_relative _program-statistics.html %}
     {% include_relative _alumni-quotes.html %}
-    {% include_relative _past-companies.html %}
+    {% include_relative _previous-companies.html %}
     {% include_relative _program-awards.html %}
     {% include_relative _program-staff.html %}
 </main>
