--- a/_pages/index/_summer-program.html
+++ b/_pages/index/_summer-program.html
@@ -14,14 +14,9 @@
             </div>
         </div>
 
-        <div class="shelf clearfix">
-            <div class="shelf-image">
-                <img class="flag" src="/assets/images/icons/flag.png" alt="">
-            </div>
-            <article class="shelf-content">
-                <h4>What’s a goal without a deadline?</h4>
-                <p>In six weeks, students learn the technology and business skills required to develop a civic-oriented startup. The application and admissions process is competitive, curriculum learned in lightspeed pace, but the achievement is worth the effort!</p>
-            </article>
-        </div>
+        <article>
+            <h4>What’s a goal without a deadline?</h4>
+            <p>In six weeks, students learn the technology and business skills required to develop a civic-oriented startup. The application and admissions process is competitive, curriculum learned in lightspeed pace, but the achievement is worth the effort!</p>
+        </article>
     </div>
 </section>
