Update judges slogan

--- a/_pages/partners/_judges.html
+++ b/_pages/partners/_judges.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="section-header">
             <h2>Our Judges</h2>
-            <h3>Getting Feedback from Investors</h3>
+            <h3>Getting Feedback from Experts</h3>
         </div>
 
         <section class="row rsorter">
