Fix typo in tag

--- a/_pages/index/_program-partners.html
+++ b/_pages/index/_program-partners.html
@@ -5,8 +5,8 @@
             <h3>Challenging Young Minds</h3>
         </div>
 
-        <aritcle>
+        <article>
             {% include modules/carousel.html title="program-partners" class="program-partners green-indicators flex-grid-carousel" content="partials/partners.html" indicators=true size=site.data.partners.size interval=15 %}
-        </aritcle>
+        </article>
     </div>
 </section>
