--- a/_pages/index/_program-overview.html
+++ b/_pages/index/_program-overview.html
@@ -5,6 +5,12 @@
             <h3>Learn lean start-up methods, coding, UI/UX, &amp; leadership skills</h3>
         </div>
 
+        <div class="movie-theater">
+            <div class="embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/SHIDhiXi6Ho" frameborder="0" allowfullscreen></iframe>
+            </div>
+        </div>
+
         <div class="canvas">
             <div class="row">
                 <div class="col-xs-6 col-md-2 col-md-offset-1">
