--- a/_pages/index/_program-overview.html
+++ b/_pages/index/_program-overview.html
@@ -7,7 +7,7 @@
 
         <div class="movie-theater">
             <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/SHIDhiXi6Ho" frameborder="0" allowfullscreen></iframe>
+                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/SHIDhiXi6Ho?rel=0" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
 
